--- a/src/content/tools/chai-bot.mdx
+++ b/src/content/tools/chai-bot.mdx
@@ -18,6 +18,10 @@ supportsRussian: true
 paymentMethods:
   - card
   - crypto
+collections:
+  - telegram-bots
+  - ai-girlfriends
+  - russian-friendly
 faq:
   - question: "Как начать пользоваться?"
     answer: "Просто откройте бота в Telegram и начните диалог. Регистрация не требуется."
