--- a/src/content/tools/seduced-ai.mdx
+++ b/src/content/tools/seduced-ai.mdx
@@ -14,6 +14,8 @@ requiresVpn: true
 supportsRussian: false
 paymentMethods:
   - crypto
+collections:
+  - image-generators
 faq:
   - question: "Какие модели используются?"
     answer: "Сервис использует собственные fine-tuned модели на базе Stable Diffusion."
