--- a/src/content/tools/crushon-ai.mdx
+++ b/src/content/tools/crushon-ai.mdx
@@ -15,6 +15,8 @@ supportsRussian: true
 paymentMethods:
   - crypto
   - card
+collections:
+  - ai-girlfriends
 faq:
   - question: "Нужен ли VPN для CrushOn AI?"
     answer: "Да, сервис заблокирован в России, потребуется VPN для доступа."
