--- a/src/content/tools/candy-ai.mdx
+++ b/src/content/tools/candy-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Candy AI"
 shortDescription: "AI-подруга с генерацией изображений. Общайтесь и получайте фото от виртуального персонажа."
-coverImage: ""
+coverImage: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=800&h=500&fit=crop"
 tags:
   - chatbot
   - image-gen
@@ -21,26 +21,47 @@ collections:
   - russian-friendly
 faq:
   - question: "Можно ли оплатить картой РФ?"
-    answer: "Да, сервис принимает карты российских банков напрямую."
+    answer: "Да, сервис принимает карты российских банков напрямую через локальные платёжные системы."
   - question: "Есть ли бесплатный доступ?"
-    answer: "Да, есть бесплатные сообщения и генерации каждый день."
+    answer: "Да, есть бесплатные сообщения и генерации каждый день. Достаточно для знакомства с сервисом."
+  - question: "Как работает генерация изображений?"
+    answer: "AI создаёт уникальные фото вашего персонажа по запросу. Можно попросить фото в разных образах и ситуациях."
+  - question: "Сохраняется ли история переписки?"
+    answer: "Да, вся история сохраняется в вашем аккаунте и доступна с любого устройства."
 publishedAt: 2024-11-20
 ---
 
 ## О сервисе
 
-Candy AI — это платформа для общения с AI-персонажами, которая также умеет генерировать изображения. Уникальная особенность — возможность получать фото от вашего виртуального собеседника.
+Candy AI — это платформа нового поколения для общения с AI-персонажами. Главная фишка — возможность не только переписываться, но и получать уникальные фотографии вашего виртуального собеседника. AI генерирует изображения на основе внешности персонажа и вашего запроса.
 
-## Возможности
+## Ключевые возможности
 
-- Текстовое общение с AI
-- Генерация изображений персонажа
-- Создание собственных персонажей
-- Поддержка русского языка
-- Работает без VPN
+- **Умный чат** — AI запоминает контекст и ваши предпочтения
+- **Генерация фото** — получайте уникальные изображения персонажа
+- **Кастомизация** — создавайте персонажей с нуля или выбирайте готовых
+- **Голосовые сообщения** — персонаж может отвечать голосом
+- **Русский язык** — полная поддержка русского в диалогах
+
+## Тарифы
+
+| План | Цена | Что включено |
+|------|------|--------------|
+| Free | $0 | 50 сообщений/день, 5 фото/день |
+| Premium | $12.99/мес | Безлимит сообщений, 100 фото/день |
+| Ultimate | $29.99/мес | Всё безлимитно + приоритет |
 
 ## Преимущества для России
 
-- Принимает карты РФ
-- Не требует VPN
-- Понимает русский язык
+Candy AI — один из немногих сервисов, который:
+- Принимает карты Сбербанка, Тинькофф и других банков РФ
+- Работает без VPN
+- Имеет качественную локализацию на русский
+
+## Как начать
+
+1. Зарегистрируйтесь на сайте
+2. Выберите персонажа или создайте своего
+3. Настройте внешность и характер
+4. Начните общение!
+
