--- a/src/content/tools/chai-bot.mdx
+++ b/src/content/tools/chai-bot.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Chai Bot"
 shortDescription: "Telegram-бот для ролеплея с AI. Работает без VPN прямо в мессенджере."
-coverImage: "/images/tools/chai-placeholder.jpg"
+coverImage: "https://images.unsplash.com/photo-1611746872915-64382b5c76da?w=800&h=500&fit=crop"
 tags:
   - telegram-bot
   - chatbot
@@ -24,27 +24,53 @@ collections:
   - russian-friendly
 faq:
   - question: "Как начать пользоваться?"
-    answer: "Просто откройте бота в Telegram и начните диалог. Регистрация не требуется."
+    answer: "Просто откройте бота в Telegram и нажмите Start. Регистрация не требуется, можно сразу начать общение."
   - question: "Можно ли оплатить картой РФ?"
-    answer: "Да, бот принимает оплату картами российских банков."
+    answer: "Да, бот принимает оплату картами российских банков через встроенные платежи Telegram."
+  - question: "Чем отличается от веб-версии Chai?"
+    answer: "Telegram-бот удобнее для мобильного использования и не требует отдельного приложения. Функционал аналогичен."
+  - question: "Есть ли ограничения в бесплатной версии?"
+    answer: "Да, количество сообщений в день ограничено. Premium снимает все лимиты."
 publishedAt: 2024-11-15
 ---
 
 ## О боте
 
-Chai Bot — это Telegram-бот для общения с AI-персонажами. Главное преимущество — работает прямо в Telegram без VPN.
+Chai Bot — это официальный Telegram-бот платформы Chai для общения с AI-персонажами. Главное преимущество — работает прямо в Telegram без установки дополнительных приложений и без VPN.
+
+## Почему Telegram-версия?
+
+- **Удобство** — не нужно переключаться между приложениями
+- **Уведомления** — получайте ответы как обычные сообщения
+- **Приватность** — вся переписка в вашем Telegram
+- **Оплата** — встроенные платежи Telegram принимают карты РФ
 
 ## Возможности
 
-- Работает в Telegram без VPN
-- Принимает карты РФ
-- Понимает русский язык
-- Множество персонажей на выбор
-- Создание своих персонажей
+- Общение с тысячами AI-персонажей
+- Создание собственных персонажей
+- Ролеплей в любых сеттингах
+- Память контекста разговора
+- Поддержка русского языка
 
-## Как пользоваться
+## Тарифы
 
-1. Откройте [бота в Telegram](https://t.me/chai_bot)
+| План | Цена | Сообщений |
+|------|------|-----------|
+| Free | $0 | 70/день |
+| Premium | $13.99/мес | Безлимит |
+| Ultra | $29.99/мес | Безлимит + приоритет |
+
+## Как начать
+
+1. Откройте [@chai_bot](https://t.me/chai_bot) в Telegram
 2. Нажмите "Start"
-3. Выберите персонажа или создайте своего
-4. Начните общение!
+3. Выберите персонажа из каталога
+4. Начните диалог!
+
+## Советы
+
+- Используйте команду /new для начала нового диалога
+- Команда /characters покажет популярных персонажей
+- Пишите на русском — бот отлично понимает
+
