--- a/src/content/tools/chai-bot.mdx
+++ b/src/content/tools/chai-bot.mdx
@@ -8,6 +8,7 @@ tags:
   - russian
   - no-vpn
 priceModel: freemium
+priceFrom: 7
 isNsfw: true
 affiliateLink: "https://chai.ml/?ref=catalog"
 telegramBotLink: "https://t.me/chai_bot"
