--- a/src/content/tools/civitai.mdx
+++ b/src/content/tools/civitai.mdx
@@ -6,6 +6,7 @@ tags:
   - image-gen
   - no-vpn
 priceModel: freemium
+priceFrom: 5
 isNsfw: true
 affiliateLink: "https://civitai.com/?ref=catalog"
 rating: 4.7
