--- a/src/content/tools/crushon-ai.mdx
+++ b/src/content/tools/crushon-ai.mdx
@@ -6,6 +6,7 @@ tags:
   - chatbot
   - russian
 priceModel: freemium
+priceFrom: 6
 isNsfw: true
 affiliateLink: "https://crushon.ai/?ref=catalog"
 rating: 4.5
