--- a/src/content/tools/leonardo-ai.mdx
+++ b/src/content/tools/leonardo-ai.mdx
@@ -6,6 +6,7 @@ tags:
   - image-gen
   - no-vpn
 priceModel: freemium
+priceFrom: 6
 isNsfw: false
 affiliateLink: "https://leonardo.ai/?ref=catalog"
 rating: 4.6
