--- a/src/content/tools/poe.mdx
+++ b/src/content/tools/poe.mdx
@@ -6,6 +6,7 @@ tags:
   - chatbot
   - no-vpn
 priceModel: freemium
+priceFrom: 8
 isNsfw: false
 affiliateLink: "https://poe.com/?ref=catalog"
 rating: 4.4
