--- a/src/content/tools/replika.mdx
+++ b/src/content/tools/replika.mdx
@@ -7,6 +7,7 @@ tags:
   - russian
   - no-vpn
 priceModel: freemium
+priceFrom: 7
 isNsfw: false
 affiliateLink: "https://replika.ai/?ref=catalog"
 rating: 4.0
