--- a/src/content/tools/seduced-ai.mdx
+++ b/src/content/tools/seduced-ai.mdx
@@ -6,6 +6,7 @@ tags:
   - image-gen
   - crypto
 priceModel: paid
+priceFrom: 5
 isNsfw: true
 affiliateLink: "https://seduced.ai/?ref=catalog"
 rating: 4.7
