--- a/src/content/tools/soulgen.mdx
+++ b/src/content/tools/soulgen.mdx
@@ -6,6 +6,7 @@ tags:
   - image-gen
   - russian
 priceModel: freemium
+priceFrom: 5
 isNsfw: true
 affiliateLink: "https://soulgen.net/?ref=catalog"
 rating: 4.3
