--- a/src/content/tools/candy-ai.mdx
+++ b/src/content/tools/candy-ai.mdx
@@ -7,6 +7,7 @@ tags:
   - image-gen
   - russian
 priceModel: freemium
+priceFrom: 6
 isNsfw: true
 affiliateLink: "https://candy.ai/?ref=catalog"
 rating: 4.3
