--- a/src/content/tools/character-ai.mdx
+++ b/src/content/tools/character-ai.mdx
@@ -7,6 +7,7 @@ tags:
   - russian
   - no-vpn
 priceModel: freemium
+priceFrom: 5
 isNsfw: false
 affiliateLink: "https://character.ai/?ref=catalog"
 rating: 4.6
