--- a/src/content/tools/midjourney.mdx
+++ b/src/content/tools/midjourney.mdx
@@ -5,6 +5,7 @@ coverImage: "https://images.unsplash.com/photo-1686191128892-3b37add4c844?w=800&
 tags:
   - image-gen
 priceModel: paid
+priceFrom: 8
 isNsfw: false
 affiliateLink: "https://midjourney.com/?ref=catalog"
 rating: 4.9
