--- a/src/content/tools/muah-ai.mdx
+++ b/src/content/tools/muah-ai.mdx
@@ -7,6 +7,7 @@ tags:
   - image-gen
   - russian
 priceModel: freemium
+priceFrom: 7
 isNsfw: true
 affiliateLink: "https://muah.ai/?ref=catalog"
 rating: 4.2
