--- a/src/content/collections/russian-friendly.mdx
+++ b/src/content/collections/russian-friendly.mdx
@@ -1,23 +1,23 @@
 ---
 title: "Принимают карты РФ"
-description: "AI-сервисы, которые принимают оплату картами российских банков. Никаких проблем с оплатой."
-seoDescription: "AI сервисы с оплатой картами РФ 2024 — чат-боты и генераторы, принимающие Visa/Mastercard российских банков."
+description: "AI-компаньоны, которые принимают оплату картами российских банков. Никаких проблем с оплатой."
+seoDescription: "AI чат-боты с оплатой картами РФ 2024 — виртуальные компаньоны, принимающие карты российских банков."
 icon: "💳"
 filterField: "acceptsRussianCards"
 filterValue: true
 order: 5
 ---
 
-## AI сервисы с оплатой картами РФ
+## AI-компаньоны с оплатой картами РФ
 
-После 2022 года многие западные сервисы перестали принимать карты российских банков. В этой подборке — сервисы, где оплата картами РФ всё ещё работает.
+После 2022 года многие западные сервисы перестали принимать карты российских банков. В этой подборке — платформы, где оплата картами РФ всё ещё работает.
 
 ### Способы оплаты
 
 - **Карты РФ** — Visa/Mastercard российских банков
 - **СБП** — Система быстрых платежей
 - **Криптовалюта** — Bitcoin, USDT и другие
-- **Электронные кошельки** — ЮMoney, Qiwi
+- **Telegram Payments** — для ботов в Telegram
 
 ### Как проверить
 
@@ -26,6 +26,6 @@ order: 5
 ### Альтернативы
 
 Если сервис не принимает карты РФ напрямую:
-- Используйте криптовалюту
-- Попробуйте виртуальные карты зарубежных банков
+- Используйте криптовалюту (USDT самый простой)
+- Попробуйте виртуальные карты через Wise
 - Рассмотрите аналоги из этой подборки
